// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown renders control action dropdown 1`] = `
<Dropdown
  controlAction={true}
  icon={null}
  iconPosition="start"
  label="add"
>
  <div
    className="dropdown"
  >
    <button
      className="dropdownButton dropdownControlAction"
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <span
        className="dropdownIcon"
      >
        <Icon
          icon={null}
          inheritSize={false}
          role="img"
          title="Open menu"
        >
          <svg
            aria-labelledby="id-3-title"
            className="icon"
            focusable="false"
            role="img"
            viewBox="viewBox"
          >
            <title
              id="id-3-title"
            >
              Open menu
            </title>
            <use
              xlinkHref="#id"
            />
          </svg>
        </Icon>
      </span>
      <span
        className="dropdownLabel"
      >
        add
      </span>
      <span
        className="chevronIcon"
      >
        <Icon
          icon={null}
          inheritSize={false}
          role="img"
          title="Open menu"
        >
          <svg
            aria-labelledby="id-4-title"
            className="icon"
            focusable="false"
            role="img"
            viewBox="viewBox"
          >
            <title
              id="id-4-title"
            >
              Open menu
            </title>
            <use
              xlinkHref="#id"
            />
          </svg>
        </Icon>
      </span>
    </button>
  </div>
</Dropdown>
`;

exports[`Dropdown renders default view 1`] = `
<Dropdown
  iconPosition="start"
>
  <div
    className="dropdown"
  >
    <button
      className="dropdownButton"
      onClick={[Function]}
      onMouseDown={[Function]}
    />
  </div>
</Dropdown>
`;

exports[`Dropdown renders drop down with icon 1`] = `
<Dropdown
  icon={null}
  iconPosition="start"
>
  <div
    className="dropdown"
  >
    <button
      className="dropdownButton"
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <span
        className="dropdownIcon"
      >
        <Icon
          icon={null}
          inheritSize={false}
          role="img"
          title="Open menu"
        >
          <svg
            aria-labelledby="id-1-title"
            className="icon"
            focusable="false"
            role="img"
            viewBox="viewBox"
          >
            <title
              id="id-1-title"
            >
              Open menu
            </title>
            <use
              xlinkHref="#id"
            />
          </svg>
        </Icon>
      </span>
    </button>
  </div>
</Dropdown>
`;

exports[`Dropdown renders drop down with icon and label 1`] = `
<Dropdown
  icon={null}
  iconPosition="start"
  label="add"
>
  <div
    className="dropdown"
  >
    <button
      className="dropdownButton"
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <span
        className="dropdownIcon"
      >
        <Icon
          icon={null}
          inheritSize={false}
          role="img"
          title="Open menu"
        >
          <svg
            aria-labelledby="id-2-title"
            className="icon"
            focusable="false"
            role="img"
            viewBox="viewBox"
          >
            <title
              id="id-2-title"
            >
              Open menu
            </title>
            <use
              xlinkHref="#id"
            />
          </svg>
        </Icon>
      </span>
      <span
        className="dropdownLabel"
      >
        add
      </span>
    </button>
  </div>
</Dropdown>
`;

exports[`Dropdown renders drop down with only label 1`] = `
<Dropdown
  iconPosition="start"
  label="add"
>
  <div
    className="dropdown"
  >
    <button
      className="dropdownButton"
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <span
        className="dropdownLabel"
      >
        add
      </span>
    </button>
  </div>
</Dropdown>
`;

exports[`Dropdown renders reversed control action dropdown 1`] = `
<Dropdown
  controlAction={true}
  icon={null}
  iconPosition="start"
  label="add"
  reversed={true}
>
  <div
    className="dropdown"
  >
    <button
      className="dropdownButton dropdownControlAction reversed"
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <span
        className="dropdownIcon"
      >
        <Icon
          icon={null}
          inheritSize={false}
          role="img"
          title="Open menu"
        >
          <svg
            aria-labelledby="id-5-title"
            className="icon"
            focusable="false"
            role="img"
            viewBox="viewBox"
          >
            <title
              id="id-5-title"
            >
              Open menu
            </title>
            <use
              xlinkHref="#id"
            />
          </svg>
        </Icon>
      </span>
      <span
        className="dropdownLabel"
      >
        add
      </span>
      <span
        className="chevronIcon"
      >
        <Icon
          icon={null}
          inheritSize={false}
          role="img"
          title="Open menu"
        >
          <svg
            aria-labelledby="id-6-title"
            className="icon"
            focusable="false"
            role="img"
            viewBox="viewBox"
          >
            <title
              id="id-6-title"
            >
              Open menu
            </title>
            <use
              xlinkHref="#id"
            />
          </svg>
        </Icon>
      </span>
    </button>
  </div>
</Dropdown>
`;
